<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/size10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/size100"
            android:layout_height="@dimen/size100"
            android:contentDescription="@string/img"
            android:src="@drawable/ic_art" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size10"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_title"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:saveEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size10"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status" />

            <RadioButton
                android:id="@+id/teacherRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teacher" />

            <RadioButton
                android:id="@+id/parentRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parent" />

            <RadioButton
                android:id="@+id/studentRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student" />
        </RadioGroup>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="@dimen/size200"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size10"
            android:onClick="onClick"
            android:text="@string/login"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/size100" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>