<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".Activity.Teacher.DashboardTeacherActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size20"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/head_title"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/desc" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size20"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_personal"
                android:layout_width="@dimen/size150"
                android:layout_height="@dimen/size150"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="onClick"
                app:cardElevation="@dimen/size2"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:layout_width="@dimen/size50"
                    android:layout_height="@dimen/size50"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/size5"
                    android:contentDescription="@string/img"
                    android:src="@drawable/ic_personal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/size20"
                    android:gravity="center"
                    android:text="@string/personal_data"
                    android:textAlignment="center"
                    tools:ignore="RtlCompat" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_announcement"
                android:layout_width="@dimen/size150"
                android:layout_height="@dimen/size150"
                android:layout_marginLeft="@dimen/size10"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="onClick"
                app:cardElevation="@dimen/size2"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:layout_width="@dimen/size50"
                    android:layout_height="@dimen/size50"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/size5"
                    android:contentDescription="@string/img"
                    android:src="@drawable/ic_announcement" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/size10"
                    android:gravity="center"
                    android:text="Pengumuman"
                    android:textAlignment="center"
                    tools:ignore="RtlCompat" />


            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvPost"
                android:layout_width="@dimen/size150"
                android:layout_height="@dimen/size150"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="onClick"
                app:cardElevation="@dimen/size2"
                app:cardUseCompatPadding="true">


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_data"
                android:layout_width="@dimen/size150"
                android:layout_height="@dimen/size150"
                android:layout_marginLeft="@dimen/size10"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardElevation="@dimen/size2"
                app:cardUseCompatPadding="true">


            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/size150"
                android:layout_height="@dimen/size150"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="onClick"
                app:cardElevation="@dimen/size2"
                app:cardUseCompatPadding="true">


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/size150"
                android:layout_height="@dimen/size150"
                android:layout_marginLeft="@dimen/size10"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardElevation="@dimen/size2"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/size10"
                    android:text=""
                    android:textAlignment="center"
                    tools:ignore="RtlCompat" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/size150"
                android:layout_height="@dimen/size150"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardElevation="@dimen/size2"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/size10"
                    android:text=""
                    android:textAlignment="center"
                    tools:ignore="RtlCompat" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/size150"
                android:layout_height="@dimen/size150"
                android:layout_marginLeft="@dimen/size10"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardElevation="@dimen/size2"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/size10"
                    android:text=""
                    android:textAlignment="center"
                    tools:ignore="RtlCompat" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size50"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/size150"
                android:layout_height="@dimen/size150"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardElevation="@dimen/size2"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/size10"
                    android:text=""
                    android:textAlignment="center"
                    tools:ignore="RtlCompat" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_logout"
                android:layout_width="@dimen/size150"
                android:layout_height="@dimen/size150"
                android:layout_marginLeft="@dimen/size10"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="onClick"
                app:cardElevation="@dimen/size2"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:layout_width="@dimen/size50"
                    android:layout_height="@dimen/size50"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/size5"
                    android:contentDescription="@string/img"
                    android:src="@drawable/ic_logout" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/size20"
                    android:gravity="center"
                    android:text="@string/logout"
                    android:textAlignment="center"
                    tools:ignore="RtlCompat" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>
</ScrollView>